package interfaces;

/**
 * interface representing thinkable behavior
 */

public interface Thinkable {
    void think();          
}